--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 sudo: false
 language: ruby
+cache: bundler
 rvm:
   - 2.5.0
-before_install: gem install bundler
-
+  - 2.5.1
+before_install:
+  - gem update --system
+  - gem update bundler
+notifications:
+  email:
+    on_success: change
+    on_failure: change
